--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "install-server": "cd server && npm install && cd ..",
     "build": "npm run build-client",
     "build-client": "cd client && npm run build && cd ..",
-    "test": "npm run test-server && npm run test-client",
+    "test": "npm run test-server",
     "test-server": "cd server && npm test && cd ..",
     "test-client": "cd client && CI=true npm test && cd ..",
     "start": "npm run start-server",
